# gateway_data_process

./: CMakeLists.txt  README.md  gateway-data-process.service  gdpStart.sh  main.c  main.cpp  startService.sh
doctest/: CMakeLists.txt  doctest.h  json_test.cpp  mqtt_test.cpp  rule_test.cpp  spdlog_test.cpp  sql_test.cpp
json/: CMakeLists.txt  json_str_convertor.c  json_str_convertor.cpp  json_str_convertor.h
log/: CMakeLists.txt  log.c  log.h
mqtt/: CMakeLists.txt  mosquitto.conf  mqtt_connector.c  mqtt_connector.cpp  mqtt_connector.h
pthread_pool/: CMakeLists.txt  PthreadPool.cpp  PthreadPool.h
rule/: CMakeLists.txt  rule.cpp  rule.h  rules.json
sql/: CMakeLists.txt  DB.cpp  DB.h  mariadb_connector.c  mariadb_connector.h  mysql_pool.cpp  mysql_pool.h  sqlite_connector.c  sqlite_connector.h
